Fix transparency  on smaller codeblocks

--- a/extras/Developer-Toolkit/sources/css/dark.css
+++ b/extras/Developer-Toolkit/sources/css/dark.css
@@ -106,7 +106,7 @@
 }
 
 #wrapper.dark div.categoryBody > p code {
-	background: #282c34;
+	background: #282c3477;
 }
 
 #wrapper.dark div.categoryBody pre button {
