--- a/extras/Developer-Toolkit/sources/css/light.css
+++ b/extras/Developer-Toolkit/sources/css/light.css
@@ -85,7 +85,7 @@ a.sideItem.activeTab:hover {
 
 
 div.categoryBody > p code {
-    background: #fafafa;
+    background: #fafafa77;
 }
 
 div.categoryBody pre button {
